

project_headers += files(
    'buffers.hpp',
    'config.hpp',
    'database.hpp',
    'defs.hpp',
    'errors.hpp',
    'future.hpp',
    'hex_dump.hpp',
    'mempools.hpp',
    'spinlock.hpp',
    'transaction.hpp',
    'ts_factory.hpp',
    'types.hpp',
    'undolog.hpp',
    'util.hpp',
)


project_sources += files (
    'config.cpp',
    'hex_dump.cpp',
    'undolog.cpp',
    'util.cpp',
)
