

project_headers += files(
    'declustered_layout.hpp',
    'dotwriter.hpp',
    'graph.hpp',
    'graph_maxcut.hpp',
    'graph_toposort.hpp',
    'partitioning.hpp',
    'switch_simulator.hpp',
    'transaction.hpp',
    'tuple_location.hpp',
)


project_sources += files(
    'declustered_layout.cpp',
    'dotwriter.cpp',
    'graph.cpp',
    'graph_maxcut.cpp',
    'graph_toposort.cpp',
    'partitioning.cpp',
    'switch_simulator.cpp',
)
