project_headers += files(
    'smallbank.hpp',
    'random.hpp',
    'table.hpp',
    'transaction.hpp',
)


project_sources += files(
    'smallbank.cpp',
    'txn/amalgamate.cpp',
    'txn/balance.cpp',
    'txn/deposit_checking.cpp',
    'txn/send_payment.cpp',
    'txn/transact_saving.cpp',
    'txn/write_check.cpp',
    'txn/switch.cpp'
)
